name:                hgb
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.2.0.0
synopsis:            A Game Boy Emulator
homepage:            https://github.com/Zenol/hgb
category:            Game
license:             ZLib
license-file:        LICENSE
author:              Jérémy Cochoy
maintainer:          jeremy.cochoy@gmail.com
build-type:          Simple
cabal-version:       >=1.14

library
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules:     HGB.Types,
                       HGB.MMU,
                       HGB.CPU,
                       HGB.GPU,
                       HGB.IO,
                       HGB.Cartridge,
                       HGB.Lens

  build-depends:       base           >= 4.6,
                       lens           >= 3.9,
                       data-default   >= 0.5,
                       vector         >= 0.10,
                       mtl            >= 2.1,
                       errors         >= 1.4.2,
                       bytestring     >= 0.10.0.2

executable hgb
  hs-source-dirs: src
  main-is: Shield.hs
  build-depends:       base           == 4.8.*,
                       lens           >= 3.9,
                       data-default   >= 0.5,
                       vector         >= 0.10,
                       mtl            >= 2.1,
                       errors         >= 1.4.2,
                       bytestring     >= 0.10.0.2,
                       SFML           >= 2.3.2,
                       -- Debug only :
                       groom          >= 0.1
